# newts

./: .gitignore  AUTHORS  BUGS  HACKING  Makefile.am  NEWS  NEWS.PRE  README  SURVEY  THANKS  TODO  WANTED  bootstrap  configure.ac
backends/: Makefile.am
backends/uiuc/: Makefile.am  access.c  access.h  access_list.c  author_search.c  close_nf.c  compress_nf.c  create_nf.c  delete_nf.c  delete_note.c  disk.c  disk.h  get_next_bug.c  get_note.c  get_stats.c  logical_resp.c  misc.c  misc.h  modify_nf.c  modify_note.c  modify_note_text.c  open_nf.c  sequencer.c  text_search.c  title_search.c  uiuc-backend.h  update_nf.c  write_note.c
bindings/: Makefile.am
bindings/python/: Makefile.am  newtsmodule.c
clients/: Makefile.am
clients/frontends/: Makefile.am  autoseq.c  checknotes.c  common.c  dump-uiuc.c  dump-uiuc.h  frontend.h  getnote.c  mknf.c  nfadmin.c  nfdump.c  nfload.c  nfmail.c  nfpipe.c  nfprint.c  nfstats.c  nftimestamp.c  rmnf.c  scan-uiuc.h  scan-uiuc.l
clients/libnewtsutil/: Makefile.am  blacklist.c  misc.c
clients/notes/: Makefile.am  access.c  compose_mail.c  compose_note.c  curses_wrapper.c  curses_wrapper.h  director.c  display_index.c  get_number.c  get_text.c  gl_getline.c  gl_getline.h  limited_index.c  malloc_die.c  master.c  newtsrc.c  notes.c  notes.h  pager.c  pager.h  print_time.c  read_note.c  run_index.c  setup.c  signals.c  signals.h  spawn.c  utmp.c
contrib/: Makefile.am  bash-completion  newts-svn-0.ebuild  newts-version.ebuild
doc/: Makefile.am  autoseq.1  checknotes.1  entering.texi  getline.texi  getnote.1  gpl.texi  lgpl.texi  mistakes.texi  mknf.1  newts.texi  nfadmin.1  nfdump.1  nfload.1  nfmail.1  nfpipe.1  nfprint.1  nfstats.1  nftimestamp.1  notes.1  reading.texi  rmnf.1  sequencer.texi  utilities.texi  writing.texi
doc/doxygen/html/: access_8h-source.html  access_8h.html  annotated.html  author_8h-source.html  author_8h.html  config_8h-source.html  connection_8h-source.html  connection_8h.html  error_8h-source.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  index.html  list_8h-source.html  memory_8h-source.html  memory_8h.html  newts_8h-source.html  nfref_8h-source.html  nfref_8h.html  note_8h-source.html  notesfile_8h-source.html  notesfile_8h.html  search_8h-source.html  sequencer_8h-source.html  stats_8h-source.html  stats_8h.html  structaccess-members.html  structaccess.html  structauthor-members.html  structauthor.html  structconnection-members.html  structconnection.html  structnfref-members.html  structnfref.html  structnotesfile-members.html  (+7 more)
doc/doxygen/latex/: access_8h.tex  annotated.tex  author_8h.tex  connection_8h.tex  doxygen.sty  files.tex  memory_8h.tex  nfref_8h.tex  notesfile_8h.tex  refman.tex  stats_8h.tex  structaccess.tex  structauthor.tex  structconnection.tex  structnfref.tex  structnotesfile.tex  structstats.tex
gnulib/: .gitignore  GNUmakefile.in  Makefile.am  Makefile.in  xalloc.h
include/: Makefile.am  internal.h  structs.h
include/newts/: Doxyfile  Makefile.am  access.h  author.h  connection.h  enums.h  error.h  list.h  memory.h  newts.h  nfref.h  note.h  notesfile.h  search.h  sequencer.h  stats.h  uiuc-compatibility.h  uiuc.h  util.h  version.h
lib/: Makefile.am  getpeereid.c  which.c  which.h
libnewts/: Makefile.am  access.c  author.c  error.c  getfqdn.c  list.c  memory.c  nfref.c  notesfile.c  parse.c  stats.c
libnewtsclient/: Makefile.am  backend_wrapper.c
m4/: Makefile.am  adl_func_mkdir.m4  check_ssl.m4  rk_func_memmove.m4  tb_curses.m4  tb_define_progs.m4
m4/gnulib/: gnulib-cache.m4  gnulib-comp.m4
noted/: Makefile.am  module.c  module.h  noted.c  socket.c
noted/.deps/: noted.Po  socket.Po
po/: LINGUAS  Makevars  POTFILES.in  en@boldquot.po  en@quot.po  newts.pot
tests/: Makefile.am  access_tests.c  nfref_tests.c
tests/check/: Makefile.am  check.h
