MAINTAINERCLEANFILES = Makefile.in mdate-sh texinfo.tex

EXTRA_DIST = autoseq.1 checknotes.1 getnote.1 mknf.1 nfadmin.1 nfdump.1 \
	nfload.1 nfmail.1 nfpipe.1 nfprint.1 nfstats.1 nftimestamp.1 notes.1 rmnf.1

man1_MANS = autoseq.1 checknotes.1 getnote.1 mknf.1 nfadmin.1 nfdump.1 \
	nfload.1 nfmail.1 nfpipe.1 nfprint.1 nfstats.1 nftimestamp.1 notes.1 rmnf.1

info_TEXINFOS  = newts.texi
newts_TEXINFOS = entering.texi getline.texi gpl.texi lgpl.texi mistakes.texi \
	reading.texi sequencer.texi utilities.texi writing.texi
